--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-django==5.2.*
-psycopg2-binary==2.9.*
+asgiref==3.9.1
+Django==5.2.5
+dotenv==0.9.9
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+python-dotenv==1.1.1
+sqlparse==0.5.3
